# pattern_recognition_hw2

./: README.md  pyproject.toml
notebooks/: experiments.ipynb
