[tool.poetry]
name = "tp2"
version = "0.1.0"
description = ""
authors = ["Carlos Giudice <carlosr.giudice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.0"
sklearn = "^0.0"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
